update mocha tests

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head><link rel="stylesheet" type="text/css" href="style.css" />
+    <head><link rel="stylesheet" type="text/css" href="style.css" />
     <title>My Site Title</title></head>
-<body></body>
-</html>
-<!--Your code here -->
+    <body></body>
+</html><!--Your code here -->
